--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -15,7 +15,7 @@ setw -g aggressive-resize on
 
 # Change prefix key to C-a, easier to type, same to "screen"
 unbind C-b
-set -g prefix C-a
+set -g prefix 'C- '
 
 # Set parent terminal title to reflect current window in tmux session 
 set -g set-titles on
@@ -38,8 +38,8 @@ unbind "\$" # rename-session
 unbind ,    # rename-window
 unbind %    # split-window -h
 unbind '"'  # split-window
-unbind }    # swap-pane -D
-unbind {    # swap-pane -U
+unbind \}    # swap-pane -D
+unbind \{    # swap-pane -U
 unbind [    # paste-buffer
 unbind ]    
 unbind "'"  # select-window
@@ -95,7 +95,7 @@ bind L command-prompt -p "Link window from (session:window): " "link-window -s %
 
 # Swap panes back and forth with 1st pane
 # When in main-(horizontal|vertical) layouts, the biggest/widest panel is always @1
-bind \ if '[ #{pane_index} -eq 1 ]' \
+bind \\ if '[ #{pane_index} -eq 1 ]' \
      'swap-pane -s "!"' \
      'select-pane -t:.1 ; swap-pane -d -t 1 -s "!"'
 
@@ -153,7 +153,7 @@ bind p paste-buffer
 bind C-p choose-buffer
 
 # trigger copy mode by
-bind -n M-Up copy-mode
+bind C-c copy-mode
 
 # Scroll up/down by 1 line, half screen, whole screen
 bind -T copy-mode-vi M-Up              send-keys -X scroll-up
@@ -162,6 +162,12 @@ bind -T copy-mode-vi M-PageUp          send-keys -X halfpage-up
 bind -T copy-mode-vi M-PageDown        send-keys -X halfpage-down
 bind -T copy-mode-vi PageDown          send-keys -X page-down
 bind -T copy-mode-vi PageUp            send-keys -X page-up
+
+# Cursor movement
+bind -T copy-mode-vi C-h             send-keys -X back-to-indentation
+bind -T copy-mode-vi C-l             send-keys -X end-of-line
+bind -T copy-mode-vi C-j             send-keys -X -N 5 cursor-down
+bind -T copy-mode-vi C-k             send-keys -X -N 5 cursor-up
 
 # When scrolling with mouse wheel, reduce number of scrolled rows per tick to "2" (default is 5)
 bind -T copy-mode-vi WheelUpPane       select-pane \; send-keys -X -N 2 scroll-up
@@ -182,7 +188,6 @@ bind -T copy-mode-vi Y send-keys -X copy-line \;\
     run "tmux save-buffer - | $yank"
 bind-key -T copy-mode-vi D send-keys -X copy-end-of-line \;\
     run "tmux save-buffer - | $yank"
-bind -T copy-mode-vi C-j send-keys -X copy-pipe-and-cancel "$yank"
 bind-key -T copy-mode-vi A send-keys -X append-selection-and-cancel \;\
     run "tmux save-buffer - | $yank"
 
