binding to navigate to highest numbered window

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -82,9 +82,11 @@ bind _ split-window -v -c "#{pane_current_path}"
 # Select pane and windows
 bind -r C-[ previous-window
 bind -r C-] next-window
+bind -r Tab last-window   # cycle thru MRU tabs
+bind -r 0 select-window -t ^ \; select-window -t -1
+
 bind -r [ select-pane -t :.-
 bind -r ] select-pane -t :.+
-bind -r Tab last-window   # cycle thru MRU tabs
 bind -r C-o swap-pane -D
 
 # Zoom pane
