improve binding for c

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -66,7 +66,7 @@ bind C-e new-window -n 'tmux.conf' "sh -c '\${EDITOR:-vim} ~/.tmux.conf && tmux 
 bind C-r source-file ~/.tmux.conf \; display "Config reloaded"
 
 # new window and retain cwd
-bind c new-window -c "#{pane_current_path}"
+bind C new-window -c "#{pane_current_path}"
 
 # Prompt to rename window right after it's created
 set-hook -g after-new-window 'command-prompt -I "#{window_name}" "rename-window '%%'"'
@@ -155,7 +155,7 @@ bind p paste-buffer
 bind C-p choose-buffer
 
 # trigger copy mode by
-bind C-c copy-mode
+bind c copy-mode
 
 # Scroll up/down by 1 line, half screen, whole screen
 bind -T copy-mode-vi M-Up              send-keys -X scroll-up
