use true color by default

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,7 +2,13 @@
 # ===  General settings  ===
 # ==========================
 
-set -g default-terminal "screen-256color"
+# For true color support
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+
+# The original color if true color doesn't work
+# set -g default-terminal "screen-256color"
+
 set -g history-limit 20000
 set -g buffer-limit 20
 set -sg escape-time 0
