--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -82,8 +82,11 @@ bind r command-prompt -I "#{window_name}" "rename-window '%%'"
 bind R command-prompt -I "#{session_name}" "rename-session '%%'"
 
 # Split panes
-bind | split-window -h -c "#{pane_current_path}"
-bind _ split-window -v -c "#{pane_current_path}"
+bind v split-window -h -c "#{pane_current_path}"
+bind C-v split-window -h -c "#{pane_current_path}"
+
+bind s split-window -v -c "#{pane_current_path}"
+bind C-s split-window -v -c "#{pane_current_path}"
 
 # Select pane and windows
 bind -r C-[ previous-window
@@ -127,7 +130,7 @@ bind D if -F '#{session_many_attached}' \
     'display "Session has only 1 client attached"'
 
 # Hide status bar on demand
-bind C-s if -F '#{s/off//:status}' 'set status off' 'set status on'
+bind - if -F '#{s/off//:status}' 'set status off' 'set status on'
 
 
 
