vim like pane navigation

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -89,14 +89,29 @@ bind s split-window -v -c "#{pane_current_path}"
 bind C-s split-window -v -c "#{pane_current_path}"
 
 # Select pane and windows
+bind -r [ previous-window
 bind -r C-[ previous-window
+bind -r ] next-window
 bind -r C-] next-window
 bind -r Tab last-window   # cycle thru MRU tabs
 bind -r 0 select-window -t ^ \; select-window -t -1
 
-bind -r [ select-pane -t :.-
-bind -r ] select-pane -t :.+
 bind -r C-o swap-pane -D
+
+bind h select-pane -L
+bind C-h select-pane -L
+bind j select-pane -D
+bind C-j select-pane -D
+bind k select-pane -U
+bind C-k select-pane -U
+bind l select-pane -R
+bind C-l select-pane -R
+
+# resize
+bind < resize-pane -L 10
+bind > resize-pane -R 10
+bind - resize-pane -D 10
+bind _ resize-pane -U 10
 
 # Zoom pane
 bind + resize-pane -Z
@@ -130,7 +145,7 @@ bind D if -F '#{session_many_attached}' \
     'display "Session has only 1 client attached"'
 
 # Hide status bar on demand
-bind - if -F '#{s/off//:status}' 'set status off' 'set status on'
+bind ` if -F '#{s/off//:status}' 'set status off' 'set status on'
 
 
 
