--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -190,6 +190,9 @@ bind -T copy-mode-vi M-PageDown        send-keys -X halfpage-down
 bind -T copy-mode-vi PageDown          send-keys -X page-down
 bind -T copy-mode-vi PageUp            send-keys -X page-up
 
+bind -T copy-mode-vi J              send-keys -X -N 5 scroll-down
+bind -T copy-mode-vi K              send-keys -X -N 5 scroll-up
+
 # Cursor movement
 bind -T copy-mode-vi C-h             send-keys -X back-to-indentation
 bind -T copy-mode-vi C-l             send-keys -X end-of-line
