use v to begin selection in copy mode

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -182,6 +182,9 @@ bind C-p choose-buffer
 bind c copy-mode
 bind C-c copy-mode
 
+# Selection
+bind -T copy-mode-vi v              send-keys -X begin-selection
+
 # Scroll up/down by 1 line, half screen, whole screen
 bind -T copy-mode-vi M-Up              send-keys -X scroll-up
 bind -T copy-mode-vi M-Down            send-keys -X scroll-down
