--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -193,14 +193,12 @@ bind -T copy-mode-vi M-PageDown        send-keys -X halfpage-down
 bind -T copy-mode-vi PageDown          send-keys -X page-down
 bind -T copy-mode-vi PageUp            send-keys -X page-up
 
-bind -T copy-mode-vi J              send-keys -X -N 5 scroll-down
-bind -T copy-mode-vi K              send-keys -X -N 5 scroll-up
+bind -T copy-mode-vi C-j              send-keys -X -N 5 scroll-down
+bind -T copy-mode-vi C-k              send-keys -X -N 5 scroll-up
 
 # Cursor movement
-bind -T copy-mode-vi C-h             send-keys -X back-to-indentation
-bind -T copy-mode-vi C-l             send-keys -X end-of-line
-bind -T copy-mode-vi C-j             send-keys -X -N 5 cursor-down
-bind -T copy-mode-vi C-k             send-keys -X -N 5 cursor-up
+bind -T copy-mode-vi K             send-keys -X back-to-indentation
+bind -T copy-mode-vi J             send-keys -X end-of-line
 
 # When scrolling with mouse wheel, reduce number of scrolled rows per tick to "2" (default is 5)
 bind -T copy-mode-vi WheelUpPane       select-pane \; send-keys -X -N 2 scroll-up
