change keybinding for copymode

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -179,8 +179,8 @@ bind p paste-buffer
 bind C-p choose-buffer
 
 # trigger copy mode by
-bind c copy-mode
-bind C-c copy-mode
+bind a copy-mode
+bind C-a copy-mode
 
 # Selection
 bind -T copy-mode-vi v              send-keys -X begin-selection
